:pencil: rename package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = [
 build-backend = "pdm.backend"
 
 [project]
-name = "blivedm"
+name = "bili-listener"
 dynamic = []
 description = "Python获取bilibili直播弹幕的库, 使用WebSocket协议"
 readme = "README.md"
